--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/core": "^5.6.1",
+    "@mantine/hooks": "^5.6.1",
     "@tabler/icons": "^1.106.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
