--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.5",
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.6.1",
     "@mantine/hooks": "^5.6.1",
     "@tabler/icons": "^1.106.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "slate": "^0.84.0",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.83.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
