--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@mantine/core": "^5.6.1",
     "@mantine/hooks": "^5.6.1",
     "@tabler/icons": "^1.106.0",
+    "image-extensions": "^1.1.0",
+    "is-url": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
