--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.6.1",
     "@mantine/hooks": "^5.6.1",
+    "@mantine/rte": "^5.6.4",
     "@tabler/icons": "^1.106.0",
     "image-extensions": "^1.1.0",
     "is-url": "^1.2.4",
