--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
+    "recoil": "^0.7.6",
     "slate": "^0.84.0",
     "slate-history": "^0.66.0",
     "slate-react": "^0.83.2"
