--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "slate-react": "^0.83.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
