--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,7 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["node"],
+    "paths": {
+      "@src/*": ["./src/*"],
+      "@wailsjs/*": ["./wailsjs/*"]
+    }
+
   },
   "include": [
     "src"
