--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.6.1",
     "@mantine/form": "^5.7.1",
     "@mantine/hooks": "^5.6.1",
+    "@mantine/notifications": "^5.7.2",
     "@mantine/rte": "^5.6.4",
     "@tabler/icons": "^1.106.0",
     "image-extensions": "^1.1.0",
